Fix(ci): double quotes closed

--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           echo " Hello ${{ vars.WHO_TO_GREET }}👋 from ${{ github.actor}}"
           echo " You are currently in '${{ github.ref}}'"
-          echo " My Secret is ${{ secrets.MY_SECRET }}
+          echo " My Secret is ${{ secrets.MY_SECRET }}"
 
       - name: Checkout
         uses: actions/checkout@v4
