--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -25,4 +25,42 @@ jobs:
 
       - name: Display file structure
         run: tree
+
+  Test:
+    runs-on: ubuntu-latest
+    environment: Test
+    needs: first_job
+
+    steps:
+      - run: |
+         echo "Hello ${{ vars.WHO_TO_GREET }}  from ${{ github.actor }}."
+         sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
+         echo "My secret is  '$sec'."
+
+
+  Load-Test:
+    runs-on: ubuntu-latest
+    environment: Load-Test
+    needs: Test
+
+    steps:
+      - run: |
+         echo "Hello ${{ vars.WHO_TO_GREET }}  from ${{ github.actor }}."
+         sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
+         echo "My secret is  '$sec'."
+
+  production:
+    runs-on: ubuntu-latest
+    environment:
+      name: Production
+      url: https://writeabout.net
+    needs: [ Test, Load-Test]
+
+    steps:
+      - run: |
+         echo "Hello ${{ vars.WHO_TO_GREET }}  from ${{ github.actor }}."
+         sec=$(echo ${{ secrets.MY_SECRET }} | sed 's/./& /g')
+         echo "My secret is  '$sec'."
+
+    
     
